--- a/package.json
+++ b/package.json
@@ -82,6 +82,10 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "d3": "^4.9.1",
+    "d3-axis": "^1.0.8",
+    "d3-scale": "^1.0.6",
+    "d3-shape": "^1.2.0",
+    "d3-transition": "^1.1.0",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.7",
     "immutable": "3.8.1",
