--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
-    "d3": "^4.9.1",
     "d3-axis": "^1.0.8",
     "d3-scale": "^1.0.6",
     "d3-shape": "^1.2.0",
@@ -94,6 +93,8 @@
     "lodash": "4.17.2",
     "minimist": "1.2.0",
     "normalize.css": "^5.0.0",
+    "pixi.js": "^4.7.1",
+    "prop-types": "^15.6.1",
     "query-string": "^4.3.2",
     "react": "15.4.1",
     "react-dom": "15.4.1",
@@ -170,6 +171,7 @@
     "sass-loader": "^6.0.2",
     "shelljs": "0.7.5",
     "sinon": "^2.1.0",
+    "stats.js": "^0.17.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "^2.3.0",
