--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-saga": "^0.16.2",
     "reduxsauce": "^1.0.1",
     "reselect": "^4.0.0",
+    "speech-js": "^0.1.1",
     "stats.js": "^0.17.0",
     "styled-components": "^4.1.3"
   },
