--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "artyom.js": "^1.0.6",
     "event-emitter": "^0.3.5",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
